// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`workers/repository detectPackageFiles(config) adds package files to object 1`] = `
Array [
  "package.json",
  "backend/package.json",
]
`;

exports[`workers/repository groupUpgradesByBranch(upgrades, logger) does not group if different compiled branch names 1`] = `
Object {
  "bar-1.1.0": Array [
    Object {
      "branchName": "bar-{{version}}",
      "version": "1.1.0",
    },
  ],
  "foo-1.1.0": Array [
    Object {
      "branchName": "foo-{{version}}",
      "version": "1.1.0",
    },
  ],
  "foo-2.0.0": Array [
    Object {
      "branchName": "foo-{{version}}",
      "version": "2.0.0",
    },
  ],
}
`;

exports[`workers/repository groupUpgradesByBranch(upgrades, logger) groups if same compiled branch names 1`] = `
Object {
  "bar-1.1.0": Array [
    Object {
      "branchName": "bar-{{version}}",
      "version": "1.1.0",
    },
  ],
  "foo": Array [
    Object {
      "branchName": "foo",
      "version": "2.0.0",
    },
    Object {
      "branchName": "foo",
      "version": "1.1.0",
    },
  ],
}
`;

exports[`workers/repository groupUpgradesByBranch(upgrades, logger) groups if same compiled group name 1`] = `
Object {
  "foo": Array [
    Object {
      "branchName": "foo",
      "version": "2.0.0",
    },
  ],
  "renovate/my-group": Array [
    Object {
      "branchName": "bar-{{version}}",
      "commitMessage": undefined,
      "groupBranchName": "renovate/my-group",
      "groupName": "My Group",
      "groupSlug": "my-group",
      "prBody": undefined,
      "prTitle": undefined,
      "version": "1.1.0",
    },
    Object {
      "branchName": "foo",
      "groupBranchName": "renovate/{{groupSlug}}",
      "groupName": "My Group",
      "groupSlug": "my-group",
      "version": "1.1.0",
    },
  ],
}
`;

exports[`workers/repository groupUpgradesByBranch(upgrades, logger) returns one branch if one input 1`] = `
Object {
  "foo-1.1.0": Array [
    Object {
      "branchName": "foo-{{version}}",
      "version": "1.1.0",
    },
  ],
}
`;

exports[`workers/repository initApis(config) throws if unknown platform 1`] = `"Unknown platform: foo"`;

exports[`workers/repository onboardRepository(config) should commit files and create PR 1`] = `
Array [
  Array [
    "renovate/configure",
    Array [
      Object {
        "contents": "{
  \\"enabled\\": true,
  \\"packageFiles\\": [],
  \\"depTypes\\": [\\"dependencies\\", \\"devDependencies\\", \\"optionalDependencies\\"],
  \\"pinVersions\\": true,
  \\"separateMajorReleases\\": true,
  \\"ignoreDeps\\": [],
  \\"rebaseStalePrs\\": false,
  \\"prCreation\\": \\"immediate\\",
  \\"automerge\\": \\"none\\",
  \\"branchName\\": \\"renovate/{{depName}}-{{newVersionMajor}}.x\\",
  \\"commitMessage\\": \\"Update dependency {{depName}} to version {{newVersion}}\\",
  \\"maintainYarnLock\\": false,
  \\"labels\\": [],
  \\"assignees\\": [],
  \\"reviewers\\": []
}
",
        "name": "renovate.json",
      },
    ],
    "Add renovate.json",
  ],
]
`;
